# Qt_Simple_Projects

./: CMakeLists.txt  README.md  main.cpp
QtQuick-Memory/: CMakeLists.txt  qml.qrc
QtQuick-Memory/qml/: Card.qml  CardsGrid.qml  ScoreBar.qml  TopLabel.qml  main.qml
Widget-GraphEditor/: CMakeLists.txt
Widget-GraphEditor/forms/: mainwindow.ui
Widget-GraphEditor/include/: coordinatesgrid.h  edge.h  edgeprop.h  graphview.h  mainwindow.h  node.h  nodeprop.h
Widget-GraphEditor/res/: world.qrc
Widget-GraphEditor/src/: coordinatesgrid.cpp  edge.cpp  edgeprop.cpp  graph.cpp  graphview.cpp  mainwindow.cpp  node.cpp  nodeprop.cpp
forms/: mainwindow.ui  nodeproperties.cpp  nodeproperties.h  nodeproperties.ui
include/: edge.h  graph.h  graphview.h  mainwindow.h  node.h
src/: coordinatesgrid.cpp  edge.cpp  edgeprop.cpp  graph.cpp  graphview.cpp  mainwindow.cpp  node.cpp  nodeprop.cpp
